# geo-stream

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  ROADMAP.md
.github/workflows/: ci.yml  publish.yml
crates/adapters/http/: Cargo.toml
crates/adapters/http/src/: lib.rs
crates/adapters/napi/: .gitignore  Cargo.toml  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json  types.ts
crates/adapters/napi/npm/darwin-arm64/: package.json
crates/adapters/napi/npm/darwin-x64/: package.json
crates/adapters/napi/npm/linux-arm64-gnu/: package.json
crates/adapters/napi/npm/linux-x64-gnu/: package.json
crates/adapters/napi/npm/win32-x64-msvc/: package.json
crates/adapters/napi/src/: lib.rs
crates/adapters/stdin-stdout/: Cargo.toml
crates/adapters/stdin-stdout/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: http_main.rs  main.rs
crates/cli/tests/: ndjson_fixtures.rs  ndjson_smoke.rs  ndjson_v11.rs  snapshot_restore.rs
crates/cli/tests/common/: mod.rs
crates/cli/tests/fixtures/: catalog_overlap.ndjson  corridor_geofence.ndjson  radius_boundary.ndjson
crates/engine/: Cargo.toml
crates/engine/benches/: process_batch.rs
crates/engine/src/: lib.rs  rules.rs
crates/polygon-json/: Cargo.toml
crates/polygon-json/src/: lib.rs
crates/spatial/: Cargo.toml
crates/spatial/src/: lib.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs
docker/: Dockerfile
docs-site/: README.md  docusaurus.config.ts  package-lock.json  sidebars.ts
docs-site/docs/: adapters.md  dwell.md  events-reference.md  ingest.md  installation.md  intro.md  querying.md  rules.md  zone-types.md
docs-site/docs/examples/: basic-zone.md  driver-dispatch.md  dwell-debounce.md  multi-zone.md
docs-site/src/pages/: index.tsx
examples/: sample-geofences.geojson  sample-input.ndjson  sample-zones.ndjson
examples/typescript/: 01-basic-zone.ts  02-multi-zone.ts  03-dwell.ts  package.json
geo-stream/: README.md  emitter.ts  index.d.ts  index.js  kafka.ts  package-lock.json  package.json  redis.ts  tsconfig.json  types.ts
geo-stream/src/: emitter.ts  engine.ts  events.ts  index.ts  kafka.ts  native.d.ts  redis.ts  rules.ts  types.ts
geo-stream/tests/: emitter.test.ts  kafka.test.ts  redis.test.ts
protocol/: ROADMAP.md  ndjson-v1.1.md  ndjson-v1.md  ndjson.md
protocol/schema/: README.md  ndjson-stdin-line.schema.json  ndjson-stdout-line.schema.json
scripts/: bump.sh
scripts/hooks/: pre-commit
