[package]
name = "cli"
version = "0.1.0"
edition = "2021"
description = "CLI entrypoint for geo-stream"

[[bin]]
name = "geo-stream"
path = "src/main.rs"

[[bin]]
name = "geo-stream-http"
path = "src/http_main.rs"
required-features = ["http"]

[features]
default = []
http = ["dep:http-adapter", "dep:tokio"]

[dependencies]
stdin-stdout = { path = "../adapters/stdin-stdout" }
engine = { path = "../engine" }
clap = { version = "4", features = ["derive"] }
http-adapter = { path = "../adapters/http", optional = true, features = ["server"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"], optional = true }

[dev-dependencies]
serde_json = "1"
