[package]
name = "cli"
version = "0.1.0"
edition = "2021"
description = "CLI entrypoint for geo-stream"

[[bin]]
name = "geo-stream"
path = "src/main.rs"

[dependencies]
stdin-stdout = { path = "../adapters/stdin-stdout" }
engine = { path = "../engine" }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
