[package]
name = "cli"
version.workspace = true
edition.workspace = true
description = "CLI entrypoint for geo-stream"

[[bin]]
name = "geo-stream"
path = "src/main.rs"

[dependencies]
stdin-stdout = { path = "../adapters/stdin-stdout" }
engine = { path = "../engine" }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
