[package]
name = "engine"
version.workspace = true
edition.workspace = true
description = "Pure geospatial stream engine"

[dependencies]
spatial = { path = "../spatial" }
state = { path = "../state" }
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
geo = "0.28"

[[bench]]
name = "process_batch"
harness = false
