[package]
name = "spatial"
version.workspace = true
edition.workspace = true
description = "Point-in-polygon and R-tree–accelerated spatial index for geo-stream"

[dependencies]
geo = { version = "0.28", features = ["use-serde"] }
geojson = "0.24"
rstar = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
