[package]
name = "http-adapter"
version = "0.1.0"
edition = "2021"
description = "Optional HTTP adapter for geo-stream (v2)"

[features]
default = ["server"]
server = [
    "dep:axum",
    "dep:tokio",
    "dep:tower-http",
    "dep:tracing",
]

[dependencies]
engine = { path = "../../engine" }
geo = "0.28"
polygon-json = { path = "../../polygon-json" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { version = "0.1", optional = true }
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"], optional = true }
tower-http = { version = "0.5", features = ["trace"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.5", features = ["util"] }
