[package]
name = "geo-events-napi"
version = "0.1.0"
edition = "2021"
description = "NAPI-RS v3 native Node.js bindings for the geo-events engine"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = { version = "3", features = ["napi4", "serde-json"] }
napi-derive = "3"
engine       = { path = "../../engine" }
spatial      = { path = "../../spatial" }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

[build-dependencies]
napi-build = "2"
