[package]
name = "stdin-stdout"
version = "0.1.0"
edition = "2021"
description = "NDJSON stdin/stdout adapter for geo-stream"

[dependencies]
engine = { path = "../../engine" }
polygon-json = { path = "../../polygon-json" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
