[package]
name = "stdin-stdout"
version.workspace = true
edition.workspace = true
description = "NDJSON stdin/stdout adapter for geo-stream"

[dependencies]
engine = { path = "../../engine" }
spatial = { path = "../../spatial" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
